Fix: remove gap after market selector

--- a/src/containers/ToolBar/MarketSelector/MarketSelector.pcss
+++ b/src/containers/ToolBar/MarketSelector/MarketSelector.pcss
@@ -114,7 +114,7 @@
     background: var(--market-selector-background-color);
     box-shadow: 4px 4px 10px var(--shadow-color-level-2);
     display: block;
-    height: 100vh;
+    height: calc(100vh - 70px);
     left: calc(var(--big-gap) * -0.23);
     overflow-x: hidden;
     overflow-y: scroll;
